[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codesave_library"
version = "0.0.3"
authors = [
  { name="Dibya Ghosh", email="dibya.ghosh@berkeley.edu" },
]
description = "Save codebases and load them later -- for reproducibility, sharing, loading artifacts in the future."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
codesave = "codesave.app:main"

[project.urls]
"Homepage" = "https://github.com/dibyaghosh/codesave"
